--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 	<BODY>
         <FORM>
             <INPUT TYPE=button VALUE="Методы 'document'" onClick="doc1();">
-            <INPUT TYPE=button VALUE="Методы 'document2'" onClick="doc1();">
-            <INPUT TYPE=button VALUE="Методы 'window2'" onClick="win1();">
-            <INPUT TYPE=button VALUE="Методы 'window3'" onClick="win1();">
+            <INPUT TYPE=button VALUE="Методы 'window'" onClick="win1();">
         </FORM>
 	</BODY>
 </HTML>
